@@ -19,8 +19,6 @@ val ktlintCheck by tasks.creating(JavaExec::class) {
     classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args = listOf("src/**/*.kt")
-
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED") // see: https://github.com/pinterest/ktlint/issues/1195
 }
 
 val ktlintFormat by tasks.creating(JavaExec::class) {
@@ -31,6 +29,4 @@ val ktlintFormat by tasks.creating(JavaExec::class) {
     classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args = listOf("-F", "src/**/*.kt")
-
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED") // see: https://github.com/pinterest/ktlint/issues/1195
 }
